got movie object to load

--- a/paul-movie-crud/home.html
+++ b/paul-movie-crud/home.html
@@ -7,10 +7,22 @@
     <link rel='stylesheet' type='text/css' href='stylesheet.css'>
   </head>
   <body>
-    <header class='container test'>
-      <div class='row'>
-        <h2>Paul's Movie Ratings</h2>
-        <h4>Your thoughts are more important than Rotten Tomatoe's</h4>
+    <header class="movie-header">
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-5">
+          <h1>Paul's Movie Ratings</h1>
+          <h4>Of course your opinions are correct!</h4>
+        </div>
+        <div class"col-md-6">
+          <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Index</a></li>
+            <li><a href="new.html">New</a></li>
+            <li><a href="edit.html">Edit</a></li>
+            <li><a href="show.html">Show</a></li>
+          <ul>
+        </div>
       </div>
     </header>
     <main>
