push as I started working on monday morning

--- a/paul-movie-crud/index.html
+++ b/paul-movie-crud/index.html
@@ -44,18 +44,11 @@
               <th>Year</th>
               <th>My Rating</th>
             </tr>
-            <tr>
-              <td>wutang</td>
-              <td>OLEDIRTYBASTARD</td>
-              <td>long word to see what happens</td>
-              <td>not many stars</td>
-            </tr>
-            
           </table>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-primary add-movie">Add Movie</div>
-
+          <a href="new.html" class="btn btn-primary add-movie">Add Movie
+          </a>
         </div>
       </div>
     </div>
@@ -66,7 +59,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
-    <script src='index.js'></script>
+    <script src='scripts/index.js'></script>
 
 
   </body>
