--- a/paul-movie-crud/new.html
+++ b/paul-movie-crud/new.html
@@ -64,14 +64,14 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button class="btn btn-primary add-movie">Add Movie</button>
+      <button  class="btn btn-primary add-movie">Add Movie</button>
     </div>
   </div>
 </form>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
-    <script type="text/javascript" src="new.js"></script>
+    <script type="text/javascript" src="scripts/new.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   </body>
 
