--- a/paul-movie-crud/edit.html
+++ b/paul-movie-crud/edit.html
@@ -41,25 +41,25 @@
     <div class="form-group">
       <label for="director" class="col-sm-2 control-label">Director</label>
       <div class="col-sm-6">
-        <input type="password" class="form-control director-edit" id="inputPassword3">
+        <input type="text" class="form-control director-edit" id="inputPassword3">
       </div>
     </div>
     <div class="form-group">
       <label for="year" class="col-sm-2 control-label">Year</label>
       <div class="col-sm-6">
-        <input type="password" class="form-control year-edit" id="inputPassword3">
+        <input type="text" class="form-control year-edit" id="inputPassword3">
       </div>
     </div>
     <div class="form-group">
       <label for="my-rating" class="col-sm-2 control-label">My Rating</label>
       <div class="col-sm-3">
-        <input type="password" class="form-control my-rating-edit" id="inputPassword3">
+        <input type="text" class="form-control my-rating-edit" id="inputPassword3">
       </div>
     </div>
     <div class="form-group">
       <label for="poster-url" class="col-sm-2 control-label">Poster URL</label>
       <div class="col-sm-6">
-        <input type="password" class="form-control poster-url-edit" id="inputPassword3">
+        <input type="text" class="form-control poster-url-edit" id="inputPassword3">
       </div>
     </div>
     <div class="form-group">
@@ -71,6 +71,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
+    <script src='scripts/edit.js'></script>
 
   </body>
 
