--- a/paul-movie-crud/show.html
+++ b/paul-movie-crud/show.html
@@ -26,9 +26,10 @@
         </div>
       </div>
     </header>
-
+    <h2>someting on the page!</h2>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
+    <script src='scripts/show.js'></script>
 
   </body>
 </html>
