--- a/paul-movie-crud/edit.html
+++ b/paul-movie-crud/edit.html
@@ -30,44 +30,46 @@
     <h2 class="movie-name-render"></h2>
 
     <div class="movie-poster-render"></div>
-
-  <form class="form-horizontal">
-    <div class="form-group">
-      <label for="title" class="col-sm-2 control-label">Title</label>
-      <div class="col-sm-6">
-        <input type="movie-title" class="form-control movie-title-edit" id="inputEmail3">
+  <div class="row">
+    <form class="form-horizontal">
+      <div class="form-group">
+        <label for="title" class="col-sm-1 control-label">Title</label>
+        <div class="col-sm-5">
+          <input type="movie-title" class="form-control movie-title-edit" id="inputEmail3">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="director" class="col-sm-2 control-label">Director</label>
-      <div class="col-sm-6">
-        <input type="text" class="form-control director-edit" id="inputPassword3">
+      <div class="form-group">
+        <label for="director" class="col-sm-1 control-label">Director</label>
+        <div class="col-sm-5">
+          <input type="text" class="form-control director-edit" id="inputPassword3">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="year" class="col-sm-2 control-label">Year</label>
-      <div class="col-sm-6">
-        <input type="text" class="form-control year-edit" id="inputPassword3">
+      <div class="form-group">
+        <label for="year" class="col-sm-1 control-label">Year</label>
+        <div class="col-sm-5">
+          <input type="text" class="form-control year-edit" id="inputPassword3">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="my-rating" class="col-sm-2 control-label">My Rating</label>
-      <div class="col-sm-3">
-        <input type="text" class="form-control my-rating-edit" id="inputPassword3">
+      <div class="form-group">
+        <label for="my-rating" class="col-sm-1 control-label">My Rating</label>
+        <div class="col-sm-3">
+          <input type="text" class="form-control my-rating-edit" id="inputPassword3">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="poster-url" class="col-sm-2 control-label">Poster URL</label>
-      <div class="col-sm-6">
-        <input type="text" class="form-control poster-url-edit" id="inputPassword3">
+      <div class="form-group">
+        <label for="poster-url" class="col-sm-1 control-label">Poster URL</label>
+        <div class="col-sm-5">
+          <input type="text" class="form-control poster-url-edit" id="inputPassword3">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary edit-movie">Edit Movie</button>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-primary edit-movie">Edit Movie</button>
+        </div>
       </div>
-    </div>
-  </form>
+    </form>
+    <img class='col-sm-6 poster-url-render'>
+  </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
