--- a/paul-movie-crud/show.html
+++ b/paul-movie-crud/show.html
@@ -26,7 +26,15 @@
         </div>
       </div>
     </header>
-    <h2>someting on the page!</h2>
+
+    <h3 class='movie-title-edit'></h3>
+    <h3 class='director-edit'></h3>
+    <h3 class='year-edit'></h3>
+    <h3>My Rating:</h3>
+    <h3 class='my-rating-edit'></h3>
+    <img class='poster-url-edit'>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
     <script src='scripts/show.js'></script>
